fix system service

--- a/systemd/system/git-bro.service
+++ b/systemd/system/git-bro.service
@@ -3,4 +3,4 @@ Description=Monitor git repositories
 
 [Service]
 Environment="SYSTEM_MODE=true"
-ExecStart=%h/.local/bin/git-bro
+ExecStart=/usr/bin/git-bro
